Fixed CV Page CSS
Fixed a small mistake resulting in CVs in CV Page overflowing from frame.

--- a/komps/cv/komp.cv.style.css
+++ b/komps/cv/komp.cv.style.css
@@ -1,6 +1,6 @@
 cv{
     embed{
-        width: 90vw;
+        width: 80vw;
         height: 85vh;
     }
 }
